{
    "name": "TouchControlls",
    "maps": [
        {
            "name": "Touch",
            "id": "b6b02554-1fc9-44aa-81bc-14633f82157f",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "5c5539fe-2397-48fb-80c4-e759956120ba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "5566276f-5a9a-43f7-b0fc-096cbf7f0f41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPos",
                    "type": "PassThrough",
                    "id": "ce1967d6-fd0b-41cf-9ed5-fe9ea460449d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb8d2896-e857-4231-8830-642165255f28",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38bd647f-4c95-4223-88bb-4fa869f97901",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82acaa96-837f-461f-bb91-2f039e24c548",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}